Basic Database & AI Integration

--- a/backend/env.example
+++ b/backend/env.example
@@ -4,10 +4,12 @@ SUPABASE_ANON_KEY=your-supabase-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
 # AI Services Configuration
-OPENAI_API_KEY=sk-...  # or GROQ_API_KEY=gsk_...
+OPENAI_API_KEY=sk-...
+GROQ_API_KEY=gsk_...  # Optional: for LLaMA-3 models
 
 # Domain Services Configuration
 DOMAINR_API_KEY=your-domainr-api-key
+RAPIDAPI_KEY=your-rapidapi-key  # Alternative for Domainr via RapidAPI
 
 # Application Configuration
 NODE_ENV=development
