--- a/backend/package.json
+++ b/backend/package.json
@@ -9,27 +9,37 @@
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:integration": "ts-node test/day2-integration-test.ts",
-    "test:history": "ts-node test/user-history-endpoint-test.ts"
+    "test:history": "ts-node test/user-history-endpoint-test.ts",
+    "test:validators": "ts-node test/validator-smoke-test.ts"
   },
-  "keywords": ["ai", "domain", "generator", "supabase", "openai"],
+  "keywords": [
+    "ai",
+    "domain",
+    "generator",
+    "supabase",
+    "openai"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "@supabase/supabase-js": "^2.38.0",
-    "uuid": "^9.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "groq-sdk": "^0.3.1",
     "openai": "^4.20.1",
-    "groq-sdk": "^0.3.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
-    "@types/express": "^4.17.17",
-    "@types/uuid": "^9.0.5",
     "@types/cors": "^2.8.13",
-    "typescript": "^5.2.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.8.0",
+    "@types/supertest": "^6.0.3",
+    "@types/uuid": "^9.0.5",
+    "nodemon": "^3.0.1",
+    "supertest": "^7.1.4",
     "ts-node": "^10.9.1",
-    "nodemon": "^3.0.1"
+    "typescript": "^5.2.0"
   }
 }
