feat(usage): add in-memory monthly usage enforcement with env-configurable tier limits and smoke tests; wire into /api/domains/generate; update env.example

--- a/backend/env.example
+++ b/backend/env.example
@@ -15,3 +15,9 @@ RAPIDAPI_KEY=your-rapidapi-key  # Alternative for Domainr via RapidAPI
 NODE_ENV=development
 PORT=3000
 CORS_ORIGIN=http://localhost:3000
+
+# Usage Limits (per month)
+FREE_TIER_LIMIT=2
+MID_TIER_LIMIT=100
+# PREMIUM_TIER_LIMIT can be a number or 'unlimited'
+PREMIUM_TIER_LIMIT=unlimited
